--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
